k8s/base/ingressclass.yaml
# OCI Native Ingress Controller IngressClass + params.
# The controller Pod ships with the OKE addon; these two CRs must be
# user-created to claim Ingress objects.
#
# Note: kustomize places the IngressClassParameters in the `sovdefence`
# namespace (because base/kustomization sets that namespace for
# namespaced resources). The IngressClass references it via scope=Namespace.
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: native-ic-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: oci.oraclecloud.com/native-ingress-controller
  parameters:
    scope: Namespace
    namespace: sovdefence
    apiGroup: ingress.oraclecloud.com
    kind: IngressClassParameters
    name: native-ic-params
